Fix gray code header in dark mode

--- a/components/blocks/code.module.css
+++ b/components/blocks/code.module.css
@@ -9,7 +9,7 @@
 }
 
 :global(.dark) .Header {
-  @apply bg-gray-90 text-gray-50 border-gray-80;
+  @apply bg-gray-90 text-gray-60 border-gray-80;
 }
 
 .Language {
